Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-5556

Command-line tools not installed in $PATH on OS X

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 2.0-beta
    • 2.0-developer-preview-4
    • installer
    • Security Level: Public
    • None
    • Mac OS X

    Description

      When running the packaged "Couchbase Server.app", the command line tools are hidden away inside the bundle in Contents/Resources/couchbase-core/bin. This makes them pretty awkward to run.

      We should do like other apps (such as TextMate) and symlink the tools into a standard place like /usr/bin.
      We can put up an alert on first launch asking the user if they'd like this.
      There should also be a menu command so it can be done later.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jens Jens Alfke
            jens Jens Alfke
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty