MB-5556: Added UI to install command-line tools

The panel appears on first run or via the "Install Tools" menu
command.
It lets the user install the tools into ~/bin, /usr/bin/,
/usr/local/bin or /opt/local/bin.
It authenticates if the user doesn't have write permission to
that directory.

Change-Id: Ie47ce1fc924446d3f0845cbfe7df19ef0927eec5
Reviewed-on: http://review.couchbase.org/17294
Reviewed-by: Dustin Sallings <dustin@spy.net>
Reviewed-by: Marty Schoch <marty.schoch@gmail.com>
Tested-by: Jens Alfke <jens@couchbase.com>